--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -4,10 +4,8 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
 
 jobs:
-
   build:
     name: Build & Test
     runs-on: ubuntu-latest
@@ -24,3 +22,13 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+  integration:
+    name: Integration
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Build Docker image
+      run: docker build -t integration -f Dockerfile-integration .
+    - name: Run
+      run: docker run integration -test.failfast --test.parallel=4
