--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-      run: go test -v ./...
+      run: go test ./... -short
   integration:
     name: Integration
     runs-on: ubuntu-latest
