--- a/Dockerfile-integration
+++ b/Dockerfile-integration
@@ -13,7 +13,7 @@ RUN go test -c -mod vendor -o /integration_test -tags integration ./integration/
 FROM python:3.7.8
 
 # Install debugging tools
-RUN apt-get update && apt-get -y install vim
+# RUN apt-get update && apt-get -y install vim
 
 COPY --from=go /integration_test /usr/local/bin/
 COPY --from=go /rope /usr/local/bin/
